bug-044394 - On product listing >> selling price bar is not properly aligned with data under it (100-500) is fixed

--- a/application/views/css/main-rtl.css
+++ b/application/views/css/main-rtl.css
@@ -30371,7 +30371,7 @@ a.ui-button:active,
 .noUi-horizontal .noUi-handle {
   width: 20px;
   height: 20px;
-  right: -17px;
+  right: -10px;
   top: -6px; }
 
 .noUi-vertical {
@@ -30384,7 +30384,7 @@ a.ui-button:active,
   top: -17px; }
 
 .noUi-txt-dir-rtl.noUi-horizontal .noUi-handle {
-  left: -17px;
+  left: -10px;
   right: auto; }
 
 .noUi-target {
